# A2-trees-in-python

./: .gitignore  Makefile  README.md  answers.py  pyproject.toml  submit.py
configs/preprocessing/: blobs-processed.json  checkerboard-processed.json  circles-processed.json  linear-processed.json  moons-processed.json  xor-processed.json
data/processed/blobs-processed/: test.csv  train.csv
data/raw/blobs/: test.csv  (+2 more)
results/models/: blobs-processed_gini.json  blobs_gini.json  checkerboard-processed_gini.json  checkerboard_gini.json  circles-processed_gini.json  circles_gini.json  linear-processed_gini.json  linear_gini.json  moons-processed_gini.json  moons_gini.json  xor-processed_gini.json  xor_gini.json
scripts/: create_datasets.py  downsample_mnist.py  evaluate.py  fit_tree.py  preprocess.py
scripts/plotting/: create_confusion_matrix.py  plot_boundary_grid.py  plot_datasets.py  plot_depth_accuracy.py  show_mnist_digits.py
src/: config.py
src/data/: downloaders.py  feature_map.py  generators.py  utils.py
src/decision_tree/: __init__.py  factories.py  impurity.py  io.py  split.py  tree.py
src/evaluation/: cross_validation.py  metrics.py  tuning.py
src/plots/: __init__.py  _utils.py  boundaries.py  curves.py  datasets.py  grids.py  mnist.py
src_reference/data/: __init__.py
src_reference/decision_tree/: split.py
task_prompts/: a_information-gain.md  b_decision-tree.md  c_feature-engineering.md  d_hyperparameter-search.md  e_cross-validation.md  f_scripting.md  g_mnist.md
tests/: test_cross_validation.py  test_data_utils.py  test_evaluation.py  test_feature_map.py  test_impurity.py  test_io.py  test_split.py  test_tree.py  test_tuning.py
(+25 files in other folders)
